// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormMenu (snapshots) should match snapshot (confirm) 1`] = `
<div
  className="c-form-menu"
>
  <button
    className="c-form-menu__control-btn qa-click-create"
    onClick={[Function]}
  >
    Create
  </button>
  <div
    className="c-form-menu__display-box"
  >
    <p
      className="c-form-menu__confirm-text"
    >
      Are you sure?
    </p>
    <button
      className="c-form-menu__control-btn qa-click-yes"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      className="c-form-menu__control-btn qa-click-no"
      onClick={[Function]}
    >
      No
    </button>
  </div>
  <button
    className="c-form-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Public
  </button>
</div>
`;

exports[`FormMenu (snapshots) should match snapshot (default) 1`] = `
<div
  className="c-form-menu"
>
  <button
    className="c-form-menu__control-btn qa-click-create"
    onClick={[Function]}
  >
    Create
  </button>
  <button
    className="c-form-menu__control-btn qa-click-discard"
    onClick={[Function]}
  >
    Discard
  </button>
  <button
    className="c-form-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Public
  </button>
</div>
`;

exports[`FormMenu (snapshots) should match snapshot (secret) 1`] = `
<div
  className="c-form-menu"
>
  <button
    className="c-form-menu__control-btn qa-click-create"
    onClick={[Function]}
  >
    Create
  </button>
  <button
    className="c-form-menu__control-btn qa-click-discard"
    onClick={[Function]}
  >
    Discard
  </button>
  <button
    className="c-form-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Private
  </button>
</div>
`;
